--- a/kavek.html
+++ b/kavek.html
@@ -10,18 +10,20 @@
     <div class="center">
         <h1>Lucky &#127808; - Mi kis kávézónk</h1>
         <div class="main">
-            <p>Kávéinkat mindennap frissen szedjük Brazíliában</p>
-            <p>Kérheted elvitelre is</p>
-            <p>Ízelítő kínálatunkból</p>
+            <p>Kávéinkat mindennap frissen szedjük Brazíliában</br>
+                Kérheted elvitelre is</br>
+                Ízelítő kínálatunkból</p>
 
             <h2>Kávéfajták</h2>
 
-            <ul>
-                <li>&#9749; Espresso</li>
-                <li>&#9749; Americano</li>
-                <li>&#9749;Cappuccino</li>
-                <li>&#9749;Latte Macchiato</li>
-            </ul>
+            <img src="espresso.jpg" alt="Espresso" title="Espresso">
+            <p class="picturetext">Espresso</p>
+            <img src="americano.jpg" alt="Americano" title="Americano">
+            <p class="picturetext">Americano</p>
+            <img src="cappuccino.jpg" alt="Cappuccino" title="Cappuccino">
+            <p class="picturetext">Cappuccino</p>
+            <img src="latte_macchiato.jpg" alt="Latte Macchiato" title="Latte Macchiato">
+            <p class="picturetext">Latte Macchiato</p>
         </div>
     </div>
 </body>
