--- a/Sutik(Tomi)/sutik.html
+++ b/Sutik(Tomi)/sutik.html
@@ -6,13 +6,13 @@
     <title>Desszertjeink</title>
 </head>
 
-<body vlink="green" alink="white">
+<body vlink="white" alink="white">
     <div class="center">
-        <h1>Lucky &#127808; - Mi kis kávézónk</h1>
+        <h1>Lucky Kávézó</h1>
+        <p class="linkszoveg"><a href="/Fooldal(Zsombor)/fooldal.html">Főoldalunk</a></p>
+        <p class="linkszoveg"><a href="/Kavek(Balazs)/kavek.html">Kávéink</a></p>
         <div class="main">
-            <p class="bemutatoszoveg">Bemutatjuk Süteményeinket</p>
-
-            <h2>Desszertjeink</h2>
+            <p class="bemutatoszoveg">Bemutatjuk Süteményeinket!</p>
 
             <img src="kerdojel.png" alt="Süti 1" title="Süti 1">
             <p class="picturetext">Süti 1</p>
