Rendezés +süti oldal linkek
Átnevezések, kisebb változtatások

--- a/Sutik/sutik.html
+++ b/Sutik/sutik.html
@@ -6,11 +6,11 @@
     <title>Desszertjeink</title>
 </head>
 
-<body vlink="white" alink="white">
+<body vlink="royalblue" alink="black">
     <div class="center">
         <h1>Lucky Kávézó</h1>
-        <p class="linkszoveg"><a href="/Fooldal(Zsombor)/fooldal.html">Főoldalunk</a></p>
-        <p class="linkszoveg"><a href="/Kavek(Balazs)/kavek.html">Kávéink</a></p>
+        <p class="linkszoveg"><a href="../Fooldal/index.html">Főoldalunk</a></p>
+        <p class="linkszoveg"><a href="../Kavek/kavek.html">Kávéink</a></p>
         <div class="main">
             <p class="bemutatoszoveg">Bemutatjuk Süteményeinket!</p>
 
