--- a/Fooldal/index.html
+++ b/Fooldal/index.html
@@ -1,30 +1,31 @@
-<html lang="hu">
-
+<!DOCTYPE html>
+<html lang="en">
 <head>
-    <meta http-equiv="Content-Type" content="text/html;charset=UTF-8">
-    <link rel="stylesheet" href="fooldal.css">
-    <title>Lucky kávéi</title>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="oldal.css">
+    <title>Luckey kávézó</title>
 </head>
+<body>
+    <div class="container">
+        <div class="nav-bar">
+            <h1 class="title">Cof<span>fee</span></h1>
+            <p>Luckey coffe</p>
+            <ul class="menu">
+                <li><a href="#">HOME</a></li>
+                <li><a href="#">PRODUCT</a></li>
+                <li><a href="#">SERVICES</a></li>
+                <li><a href="#">CONTACT</a></li>
+                <li><a href="#">ABOUT</a></li>
+            </ul>
+        </div>
 
-<body vlink="green" alink="white">
-    <div class="center">
-        <h1>Lucky kávézó</h1>
-        <div class="main">
-            <p class="fooldal">Főoldal</br>
-                </br>
-                </p>
-
-            <img src="kavek.png" alt="Kávék" title="Kávék">
-            <p class=picturetext>Kávék</p>
-
-            <img src="sutik.png" alt="Sütik" title="Sütik">
-            <p class="picturetext">Sütik</p>
-<p class="elerhetoseg">elérhetőségeink</p>
-<p class="elerhetoseg">telefon:1-69 420 69 69</p>
-<p class="elerhetoseg">e-mail:luckeykavezo@gmail.com</p>
-            
+        <div class="home">
+            <h1 class="title-1">Good <span>Coffe</span> will always <dr>Find the audience</h1>
+            <p>We provide a variety of uniques and Best Coffees</p>
+            <button type="button">Shop Now</button>    
         </div>
     </div>
 </body>
-
 </html>
