--- a/Sutik/sutik.html
+++ b/Sutik/sutik.html
@@ -6,24 +6,45 @@
     <title>Desszertjeink</title>
 </head>
 
-<body vlink="royalblue" alink="black">
-    <div class="center">
-        <h1>Lucky Kávézó</h1>
+<body vlink="" alink="">
+    <div class="bemutato">
+        <h1 class="cim">Lucky Kávézó</h1>
         <p class="linkszoveg"><a href="../Fooldal/index.html">Főoldalunk</a></p>
         <p class="linkszoveg"><a href="../Kavek/kavek.html">Kávéink</a></p>
-        <div class="main">
-            <p class="bemutatoszoveg">Bemutatjuk Süteményeinket!</p>
-
-            <img src="kerdojel.png" alt="Süti 1" title="Süti 1">
-            <p class="picturetext">Süti 1</p>
-            <img src="kerdojel.png" alt="Süti 2" title="Süti 2">
-            <p class="picturetext">Süti 2 </p>
-            <img src="kerdojel.png" alt="Süti 3" title="Süti 3">
-            <p class="picturetext">Süti 3</p>
-            <img src="kerdojel.png" alt="Süti 4" title="Süti 4">
-            <p class="picturetext">Süti 4</p>
+    </div>
+    <div class="egesz">
+        <div class="box">
+            <div class="imgBx">
+                <img src="img1.gif">
+            </div>
+            <div class="content">
+                <h2>Süti 1<br><span>Leírás<br>Nagyon </span></h2>
+            </div>
+        </div>
+        <div class="box">
+            <div class="imgBx">
+                <img src="img2.png">
+            </div>
+            <div class="content">
+                <h2>Süti 2<br><span>Leírás<br>Nagyon</span></h2>
+            </div>
+        </div>
+        <div class="box">
+            <div class="imgBx">
+                <img src="img3.jpg">
+            </div>
+            <div class="content">
+                <h2>Süti 3<br><span>Leírás<br>jhjgdffj</span></h2>
+            </div>
+        </div>
+        <div class="box">
+            <div class="imgBx">
+                <img src="maci.png">
+            </div>
+            <div class="content">
+                <h2>Maci Sütemény<br><span>Leírás<br>Nagyon fincsi</span></h2>
+            </div>
         </div>
     </div>
 </body>
-
 </html>
