--- a/Kavek/kavek.html
+++ b/Kavek/kavek.html
@@ -7,23 +7,68 @@
 </head>
 
 <body vlink="green" alink="white">
-    <div class="center">
-        <h1>Lucky &#127808; - Mi kis kávézónk</h1>
-        <div class="main">
+    <div class="container">
+
+        <div class="nav-bar">
+            <h1 class="title">Cof<span>fee</span></h1>
+            <p>Luckey coffe</p>
+
+            <ul class="menu">
+                <li><a href="#">HOME</a></li>
+                <li><a href="#">PRODUCT</a></li>
+                <li><a href="#">SERVICES</a></li>
+                <li><a href="#">CONTACT</a></li>
+                <li><a href="#">ABOUT</a></li>
+            </ul>
+        </div>
+
+
+
+        <div class="home">
+
+            <h1 class="title-1">Lucky &#127808; - Mi kis kávézónk</h1>
             <p>Kávéinkat mindennap frissen szedjük Brazíliában</br>
                 Kérheted elvitelre is</br>
                 Ízelítő kínálatunkból</p>
+        </div>
 
-            <h2>Kávéfajták</h2>
+        <h2>Kávéfajták</h2>
+        <div class="egesz">
+            <div class="box">
+                <div class="imgBx">
+                    <img src="espresso.jpg">
+                </div>
+                <div class="content">
+                    <h2>Espresso<br><span>Leírás<br>Nagyon </span></h2>
+                </div>
+            </div>
 
-            <img src="espresso.jpg" alt="Espresso" title="Espresso">
-            <p class="picturetext">Espresso</p>
-            <img src="americano.jpg" alt="Americano" title="Americano">
-            <p class="picturetext">Americano</p>
-            <img src="cappuccino.jpg" alt="Cappuccino" title="Cappuccino">
-            <p class="picturetext">Cappuccino</p>
-            <img src="latte_macchiato.jpg" alt="Latte Macchiato" title="Latte Macchiato">
-            <p class="picturetext">Latte Macchiato</p>
+            <div class="box">
+                <div class="imgBx">
+                    <img src="americano.jpg">
+                </div>
+                <div class="content">
+                    <h2>Americano<br><span>Leírás<br>Nagyon </span></h2>
+                </div>
+            </div>
+
+            <div class="box">
+                <div class="imgBx">
+                    <img src="cappuccino.jpg">
+                </div>
+                <div class="content">
+                    <h2>Cappuccino</Caption><br><span>Leírás<br>Nagyon </span></h2>
+                </div>
+            </div>
+
+            <div class="box">
+                <div class="imgBx">
+                    <img src="latte_macchiato.jpg">
+                </div>
+                <div class="content">
+                    <h2>Latte Macchiato<br><span>Leírás<br>Nagyon </span></h2>
+                </div>
+            </div>
         </div>
     </div>
 </body>
