--- a/Fooldal/index.html
+++ b/Fooldal/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="oldal.css">
-    <title>Luckey kávézó</title>
+    <title>Lucky kávézó</title>
 </head>
 <body>
     <div class="container">
