--- a/Sutik/sutik.html
+++ b/Sutik/sutik.html
@@ -7,18 +7,23 @@
 </head>
 
 <body vlink="" alink="">
-    <div class="bemutato">
-        <h1 class="cim">Lucky Kávézó</h1>
-        <p class="linkszoveg"><a href="../Fooldal/index.html">Főoldalunk</a></p>
-        <p class="linkszoveg"><a href="../Kavek/kavek.html">Kávéink</a></p>
+    <div class="nav-bar">
+        <h1 class="title">Lucky kávézó</h1>
+        <ul class="menu">
+            <li><a href="../Kavek/kavek.html">Kávék</a></li>
+            <li><a href="../Fooldal/index.html">Főoldal</a></li>
+    </div>
+    <div>
+        Desszertjeink
     </div>
     <div class="egesz">
         <div class="box">
             <div class="imgBx">
-                <img src="img1.gif">
+                <img src="img1.png">
             </div>
             <div class="content">
-                <h2>Süti 1<br><span>Leírás<br>Nagyon </span></h2>
+                <h2>Klasszikus Hólabda<br><br><span>Leírás<br><br> A hólabda recept telitalálat azoknak, akik szeretik a csokis-kókuszos sütiket.<br>
+                Allergének: Glutén, Tojás, Tej. <br><br><p class="price">Ár: 400Ft/Szelet</p> </span></h2>
             </div>
         </div>
         <div class="box">
@@ -26,23 +31,26 @@
                 <img src="img2.png">
             </div>
             <div class="content">
-                <h2>Süti 2<br><span>Leírás<br>Nagyon</span></h2>
+                <h2>Feketeerdő Brownie<br><br><span>Leírás<br><br> Kiváló brownie tejszínhabbal és meggyszósszal a tetején.<br>Összetevők: Cukor, Rost, Fehérje, Só, Szénhidrátok.
+                <br><br><p class="price">Ár:800Ft/Szelet</p></span></h2>
             </div>
         </div>
         <div class="box">
             <div class="imgBx">
-                <img src="img3.jpg">
+                <img src="img3.png">
             </div>
             <div class="content">
-                <h2>Süti 3<br><span>Leírás<br>jhjgdffj</span></h2>
+                <h2>Pisztáciás és fehér csokoládés pudingos Muffin<br><br><span>Leírás<br><br> Csokoládés sütemény pisztáciával megszórva. <br>Allergének:-
+                <br><br><p class="price">Ár: 500Ft/Szelet</p></span></h2>
             </div>
         </div>
         <div class="box">
             <div class="imgBx">
-                <img src="maci.png">
+                <img src="img4.png">
             </div>
             <div class="content">
-                <h2>Maci Sütemény<br><span>Leírás<br>Nagyon fincsi</span></h2>
+                <h2>Málnás Oreo Desszert<br><br><span>Leírás<br><br> Pohárban tálalt desszert, melynek rétegei málnakrémből, Oreoból,Nutella krémből és friss málnából állnak.
+                <br>Allergének:- <br><br><p class="price">Ár:1000Ft/Pohár</p> </span></h2>
             </div>
         </div>
     </div>
