Süti oldal fejlesztés
kekw

--- a/Sutik/sutik.html
+++ b/Sutik/sutik.html
@@ -13,8 +13,8 @@
             <li><a href="../Kavek/kavek.html">Kávék</a></li>
             <li><a href="../Fooldal/index.html">Főoldal</a></li>
     </div>
-    <div>
-        Desszertjeink
+    <div class="kosonto">
+        <p>Desszertjeink</p>
     </div>
     <div class="egesz">
         <div class="box">
