--- a/Kavek/kavek.html
+++ b/Kavek/kavek.html
@@ -2,75 +2,77 @@
 
 <head>
     <meta http-equiv="Content-Type" content="text/html;charset=UTF-8">
+    <link href='https://fonts.googleapis.com/css?family=Raleway' rel='stylesheet'>
     <link rel="stylesheet" href="kavek.css">
     <title>Lucky kávéi</title>
 </head>
 
-<body vlink="green" alink="white">
-    <div class="container">
-
-        <div class="nav-bar">
-            <h1 class="title">Cof<span>fee</span></h1>
-            <p>Luckey coffe</p>
-
-            <ul class="menu">
-                <li><a href="#">HOME</a></li>
-                <li><a href="#">PRODUCT</a></li>
-                <li><a href="#">SERVICES</a></li>
-                <li><a href="#">CONTACT</a></li>
-                <li><a href="#">ABOUT</a></li>
-            </ul>
-        </div>
-
-
-
-        <div class="home">
-
+<body>
+    <nav class="navbar">
+        <div class="container">
             <h1 class="title-1">Lucky &#127808; - Mi kis kávézónk</h1>
-            <p>Kávéinkat mindennap frissen szedjük Brazíliában</br>
-                Kérheted elvitelre is</br>
-                Ízelítő kínálatunkból</p>
-        </div>
-
-        <h2>Kávéfajták</h2>
-        <div class="egesz">
-            <div class="box">
-                <div class="imgBx">
-                    <img src="espresso.jpg">
-                </div>
-                <div class="content">
-                    <h2>Espresso<br><span>Leírás<br>Nagyon </span></h2>
-                </div>
-            </div>
-
-            <div class="box">
-                <div class="imgBx">
-                    <img src="americano.jpg">
-                </div>
-                <div class="content">
-                    <h2>Americano<br><span>Leírás<br>Nagyon </span></h2>
-                </div>
-            </div>
-
-            <div class="box">
-                <div class="imgBx">
-                    <img src="cappuccino.jpg">
-                </div>
-                <div class="content">
-                    <h2>Cappuccino</Caption><br><span>Leírás<br>Nagyon </span></h2>
-                </div>
-            </div>
-
-            <div class="box">
-                <div class="imgBx">
-                    <img src="latte_macchiato.jpg">
-                </div>
-                <div class="content">
-                    <h2>Latte Macchiato<br><span>Leírás<br>Nagyon </span></h2>
-                </div>
+            <h1 class="logo"></h1>
+            <div class="navbar-menu">
+                <a href="../Fooldal/index.html">FŐOLDAL</a>
+                <a href="#">KÁVÉK</a>
+                <a href="../Sutik/sutik.html">SÜTIK</a>
             </div>
         </div>
+    </nav>
+
+    <div class="kosonto">
+        <p>Kávéink</p>
     </div>
+
+    <div class="egesz">
+        <div class="box">
+            <div class="imgBx">
+                <img src="espresso.jpg">
+            </div>
+            <div class="content">
+                <h2>Espresso<br><br><span>Leírás<br><br>Az espresso 25-35 ml krémes, cukor nélkül is édes kávé,
+                        vörösesbarna színű habbal a tetején<br><br>
+                        <p class="price">Ár: 500 Ft/csésze</p>
+                    </span></h2>
+            </div>
+        </div>
+
+        <div class="box">
+            <div class="imgBx">
+                <img src="americano.jpg">
+            </div>
+            <div class="content">
+                <h2>Americano<br><br><span>Leírás<br><br>Egy espressóital, amely Ausztráliában és Új-Zélandon
+                        hosszú
+                        feketeként vált ismertté<br><br>
+                        <p class="price">Ár: 900 Ft/csésze</p>
+                    </span></h2>
+            </div>
+        </div>
+
+        <div class="box">
+            <div class="imgBx">
+                <img src="cappuccino.jpg">
+            </div>
+            <div class="content">
+                <h2>Cappuccino<br><br><span>Leírás<br><br>A cappuccino egy presszókávé gőzölt és felhabosított
+                        tejjel<br><br>
+                        <p class="price">Ár: 850 Ft/csésze</p>
+                    </span></h2>
+            </div>
+        </div>
+
+        <div class="box">
+            <div class="imgBx">
+                <img src="latte_macchiato.jpg">
+            </div>
+            <div class="content">
+                <h2>Latte Macchiato<br><br><span>Leírás<br><br>Többrétegű kávékülönlegesség, felhabosított
+                        tejjel és eszpresszóval<br><br>
+                        <p class="price">Ár: 1000 Ft/pohár</p>
+                    </span></h2>
+            </div>
+        </div>
 </body>
 
 </html>
