--- a/Sutik/sutik.html
+++ b/Sutik/sutik.html
@@ -10,8 +10,10 @@
     <div class="nav-bar">
         <h1 class="title">Lucky kávézó</h1>
         <ul class="menu">
-            <li><a href="../Kavek/kavek.html">Kávék</a></li>
             <li><a href="../Fooldal/index.html">Főoldal</a></li>
+            <li><a href="../Kavek/kavek.html">Kávék</a></li>
+            <li><a href="#">Sütik</a></li>
+
     </div>
     <div class="kosonto">
         <p>Desszertjeink</p>
@@ -22,8 +24,11 @@
                 <img src="img1.png">
             </div>
             <div class="content">
-                <h2>Klasszikus Hólabda<br><br><span>Leírás<br><br> A hólabda recept telitalálat azoknak, akik szeretik a csokis-kókuszos sütiket.<br>
-                Allergének: Glutén, Tojás, Tej. <br><br><p class="price">Ár: 400Ft/Szelet</p> </span></h2>
+                <h2>Klasszikus Hólabda<br><br><span>Leírás<br><br> A hólabda recept telitalálat azoknak, akik szeretik a
+                        csokis-kókuszos sütiket.<br>
+                        Allergének: Glutén, Tojás, Tej. <br><br>
+                        <p class="price">Ár: 400 Ft/szelet</p>
+                    </span></h2>
             </div>
         </div>
         <div class="box">
@@ -31,8 +36,11 @@
                 <img src="img2.png">
             </div>
             <div class="content">
-                <h2>Feketeerdő Brownie<br><br><span>Leírás<br><br> Kiváló brownie tejszínhabbal és meggyszósszal a tetején.<br>Összetevők: Cukor, Rost, Fehérje, Só, Szénhidrátok.
-                <br><br><p class="price">Ár:800Ft/Szelet</p></span></h2>
+                <h2>Feketeerdő Brownie<br><br><span>Leírás<br><br> Kiváló brownie tejszínhabbal és meggyszósszal a
+                        tetején.<br>Összetevők: Cukor, Rost, Fehérje, Só, Szénhidrátok.
+                        <br><br>
+                        <p class="price">Ár: 800 Ft/szelet</p>
+                    </span></h2>
             </div>
         </div>
         <div class="box">
@@ -40,8 +48,11 @@
                 <img src="img3.png">
             </div>
             <div class="content">
-                <h2>Pisztáciás és fehér csokoládés pudingos Muffin<br><br><span>Leírás<br><br> Csokoládés sütemény pisztáciával megszórva. <br>Allergének:-
-                <br><br><p class="price">Ár: 500Ft/Szelet</p></span></h2>
+                <h2>Pisztáciás és fehér csokoládés pudingos Muffin<br><br><span>Leírás<br><br> Csokoládés sütemény
+                        pisztáciával megszórva. <br>Allergének:-
+                        <br><br>
+                        <p class="price">Ár: 500 Ft/szelet</p>
+                    </span></h2>
             </div>
         </div>
         <div class="box">
@@ -49,10 +60,14 @@
                 <img src="img4.png">
             </div>
             <div class="content">
-                <h2>Málnás Oreo Desszert<br><br><span>Leírás<br><br> Pohárban tálalt desszert, melynek rétegei málnakrémből, Oreoból,Nutella krémből és friss málnából állnak.
-                <br>Allergének:- <br><br><p class="price">Ár:1000Ft/Pohár</p> </span></h2>
+                <h2>Málnás Oreo Desszert<br><br><span>Leírás<br><br> Pohárban tálalt desszert, melynek rétegei
+                        málnakrémből, Oreoból,Nutella krémből és friss málnából állnak.
+                        <br>Allergének:- <br><br>
+                        <p class="price">Ár: 1000 Ft/pohár</p>
+                    </span></h2>
             </div>
         </div>
     </div>
 </body>
+
 </html>
