--- a/Fooldal/index.html
+++ b/Fooldal/index.html
@@ -1,35 +1,40 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width,initial-scale=1.0">
-        <title>landing page</title>
-        <link rel="stylesheet" href="ok.css">
-        <link href='https://fonts.googleapis.com/css?family=Raleway' rel='stylesheet'> 
-        <script src="https://kit.fontawesome.com/621136387c.js" crossorigin="anonymous"></script>
-    </head>
-    <body>
-      <nav class="navbar">
-        <div class="container">
-          <h1 class="logo"><i class="fas fa-mug-hot"></i></h1>
-          <div class="navbar-menu">
-            <a href="../Kavek/kavek.html">KÁVÉK</a>
-            <a href="../Sutik/sutik.html">SÜTIK</a>
-          </div>
-        </div>
-      </nav>
 
-      <div class="description">
-        <h2> Üdvözlünk</h2>
-        <h1>A Lucky kávézó weblapján</h1>
-        <p>Kávéinkat a legjobb és a legtehetségesebb baristák csinálják. Kávébabjainkat a legjobbhelyekről rendeljük és itthoni helységünkben dolgozzuk fel. <br> A helyszínen őröljük és csináljuk meg a kávét. </p>
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width,initial-scale=1.0">
+  <title>landing page</title>
+  <link rel="stylesheet" href="ok.css">
+  <link href='https://fonts.googleapis.com/css?family=Raleway' rel='stylesheet'>
+  <script src="https://kit.fontawesome.com/621136387c.js" crossorigin="anonymous"></script>
+</head>
+
+<body>
+  <nav class="navbar">
+    <div class="container">
+      <h1 class="logo"><i class="fas fa-mug-hot"></i></h1>
+      <div class="navbar-menu">
+        <a href="#">FŐOLDAL</a>
+        <a href="../Kavek/kavek.html">KÁVÉK</a>
+        <a href="../Sutik/sutik.html">SÜTIK</a>
       </div>
-      <div class="h1">
-        <h1>Elérhetőségek</h1>
-        <li>kövess minket instán: @luckykavezo</li>
-        <li>kövess minket facebookon:@luckykavezo</li>
-        <li>telefonszámunk: 06 20 69 420 69</li>
-        <li>e-mailunk: luckykavezo@gmail.com</li>
-      </div>
-    </body>
+    </div>
+  </nav>
+
+  <div class="description">
+    <h2>Üdvözlünk</h2>
+    <h1>A Lucky kávézó weblapján</h1>
+    <p>Kávéinkat a legjobb és a legtehetségesebb baristák csinálják. Kávébabjainkat a legjobb helyekről rendeljük és
+      itthoni helységünkben dolgozzuk fel. <br> A helyszínen őröljük és csináljuk meg a kávét. </p>
+  </div>
+  <div class="h1">
+    <h1>Elérhetőségek<br><br></h1>
+    <li>kövess minket instán: @luckykavezo</li>
+    <li>kövess minket facebookon: luckykavezo</li>
+    <li>telefonszámunk: 06 20 69 420 69</li>
+    <li>e-mailünk: luckykavezo@gmail.com</li>
+  </div>
+</body>
+
 </html>
