Navbar méretek (nem sikerült :(  )

--- a/Kavek/kavek.html
+++ b/Kavek/kavek.html
@@ -8,18 +8,13 @@
 </head>
 
 <body>
-    <nav class="navbar">
-        <div class="container">
-            <h1 class="title-1">Lucky &#127808; - Mi kis kávézónk</h1>
-            <h1 class="logo"></h1>
-            <div class="navbar-menu">
-                <a href="../Fooldal/index.html">FŐOLDAL</a>
-                <a href="#">KÁVÉK</a>
-                <a href="../Sutik/sutik.html">SÜTIK</a>
-            </div>
-        </div>
-    </nav>
-
+    <div class="nav-bar">
+        <h1 class="title">Lucky kávézó</h1>
+        <ul class="menu">
+            <li><a href="../Fooldal/index.html">Főoldal</a></li>
+            <li><a href="../Kavek/kavek.html">Kávék</a></li>
+            <li><a href="../Sutik/sutik.html">Sütik</a></li>
+    </div>
     <div class="kosonto">
         <p>Kávéink</p>
     </div>
