--- a/Sutik/sutik.html
+++ b/Sutik/sutik.html
@@ -6,15 +6,15 @@
     <title>Desszertjeink</title>
 </head>
 
-<body vlink="" alink="">
+<body>
     <div class="nav-bar">
         <h1 class="title">Lucky kávézó</h1>
         <ul class="menu">
             <li><a href="../Fooldal/index.html">Főoldal</a></li>
             <li><a href="../Kavek/kavek.html">Kávék</a></li>
             <li><a href="#">Sütik</a></li>
-
     </div>
+    
     <div class="kosonto">
         <p>Desszertjeink</p>
     </div>
