--- a/Kavek/kavek.html
+++ b/Kavek/kavek.html
@@ -1,9 +1,11 @@
 <html lang="hu">
 
 <head>
-    <meta http-equiv="Content-Type" content="text/html;charset=UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" http-equiv="Content-Type"
+        content="text/html;charset=UTF-8">
     <link href='https://fonts.googleapis.com/css?family=Raleway' rel='stylesheet'>
     <link rel="stylesheet" href="kavek.css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
     <title>Lucky kávéi</title>
 </head>
 
@@ -19,8 +21,8 @@
         <p>Kávéink</p>
     </div>
 
-    <div class="egesz">
-        <div class="box">
+    <div class="egesz row">
+        <div class="box col-xl">
             <div class="imgBx">
                 <img src="espresso.jpg">
             </div>
@@ -32,7 +34,7 @@
             </div>
         </div>
 
-        <div class="box">
+        <div class="box col-xl">
             <div class="imgBx">
                 <img src="americano.jpg">
             </div>
@@ -45,7 +47,7 @@
             </div>
         </div>
 
-        <div class="box">
+        <div class="box col-xl">
             <div class="imgBx">
                 <img src="cappuccino.jpg">
             </div>
@@ -57,7 +59,7 @@
             </div>
         </div>
 
-        <div class="box">
+        <div class="box col-xl">
             <div class="imgBx">
                 <img src="latte_macchiato.jpg">
             </div>
