--- a/Fooldal/index.html
+++ b/Fooldal/index.html
@@ -4,10 +4,11 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width,initial-scale=1.0">
-  <title>landing page</title>
+  <title>Főoldal</title>
   <link rel="stylesheet" href="ok.css">
   <link href='https://fonts.googleapis.com/css?family=Raleway' rel='stylesheet'>
   <script src="https://kit.fontawesome.com/621136387c.js" crossorigin="anonymous"></script>
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
 </head>
 
 <body>
@@ -28,12 +29,7 @@
     <p>Kávéinkat a legjobb és a legtehetségesebb baristák csinálják. Kávébabjainkat a legjobb helyekről rendeljük és
       itthoni helységünkben dolgozzuk fel. <br> A helyszínen őröljük és csináljuk meg a kávét. </p>
   </div>
-  <div class="h1">
-    <h1>Elérhetőségek<br><br></h1>
-    <li>kövess minket instán: @luckykavezo</li>
-    <li>kövess minket facebookon: luckykavezo</li>
-    <li>telefonszámunk: 06 20 69 420 69</li>
-    <li>e-mailünk: luckykavezo@gmail.com</li>
+
   </div>
 </body>
 
