--- a/Sutik/sutik.html
+++ b/Sutik/sutik.html
@@ -1,25 +1,33 @@
 <html lang="hu">
 
 <head>
-    <meta http-equiv="Content-Type" content="text/html;charset=UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" http-equiv="Content-Type" content="text/html;charset=UTF-8">
     <link rel="stylesheet" href="sutik.css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"/>
+
     <title>Desszertjeink</title>
 </head>
 
 <body>
-    <div class="nav-bar">
-        <h1 class="title">Lucky kávézó</h1>
-        <ul class="menu">
-            <li><a href="../Fooldal/index.html">Főoldal</a></li>
-            <li><a href="../Kavek/kavek.html">Kávék</a></li>
-            <li><a href="#">Sütik</a></li>
-    </div>
-    
+    <nav>
+        <input type="checkbox" id="check">
+        <label for="check" class="checkbtn">
+          <i class="fas fa-bars"></i>
+        </label>
+        <label class="logo">Lucky Kávézó</label>
+        <ul>
+          <li><a href="..//Fooldal/index.html">Főoldal</a></li>
+          <li><a href="..//Kavek/kavek.html">Kávék</a></li>
+          <li><a href="..//Sutik/sutik.html">Sütik</a></li>
+        </ul>
+    </nav>
+
     <div class="kosonto">
         <p>Desszertjeink</p>
     </div>
     <div class="egesz">
-        <div class="box">
+        <div class="box col-xl">
             <div class="imgBx">
                 <img src="img1.png">
             </div>
@@ -31,7 +39,7 @@
                     </span></h2>
             </div>
         </div>
-        <div class="box">
+        <div class="box col-xl">
             <div class="imgBx">
                 <img src="img2.png">
             </div>
@@ -43,7 +51,7 @@
                     </span></h2>
             </div>
         </div>
-        <div class="box">
+        <div class="box col-xl">
             <div class="imgBx">
                 <img src="img3.png">
             </div>
@@ -55,14 +63,14 @@
                     </span></h2>
             </div>
         </div>
-        <div class="box">
+        <div class="box col-xl">
             <div class="imgBx">
                 <img src="img4.png">
             </div>
             <div class="content">
                 <h2>Málnás Oreo Desszert<br><br><span>Leírás<br><br> Pohárban tálalt desszert, melynek rétegei
                         málnakrémből, Oreoból,Nutella krémből és friss málnából állnak.
-                        <br>Allergének:- <br><br>
+                         <br><br>
                         <p class="price">Ár: 1000 Ft/pohár</p>
                     </span></h2>
             </div>
