Nav-bar végleges
A navbar végleges beállítása és a Kávé-Süti oldal ugyanazzá tétele :)

--- a/Kavek/kavek.html
+++ b/Kavek/kavek.html
@@ -10,18 +10,20 @@
 </head>
 
 <body>
-    <div class="nav-bar">
-        <h1 class="title">Lucky kávézó</h1>
-        <ul class="menu">
-            <li><a href="../Fooldal/index.html">Főoldal</a></li>
-            <li><a href="../Kavek/kavek.html">Kávék</a></li>
-            <li><a href="../Sutik/sutik.html">Sütik</a></li>
-    </div>
+    <nav>
+        <label class="logo">Lucky Kávézó</label>
+        <ul>
+          <li><a href="..//Fooldal/index.html">Főoldal</a></li>
+          <li><a href="..//Kavek/kavek.html">Kávék</a></li>
+          <li><a href="..//Sutik/sutik.html">Sütik</a></li>
+        </ul>
+    </nav>
+
     <div class="kosonto">
         <p>Kávéink</p>
     </div>
 
-    <div class="egesz row">
+    <div class="egesz">
         <div class="box col-xl">
             <div class="imgBx">
                 <img src="espresso.jpg">
