--- a/Fooldal/index.html
+++ b/Fooldal/index.html
@@ -12,22 +12,21 @@
 </head>
 
 <body>
-  <nav class="navbar">
-    <div class="container">
-      <h1 class="logo"><i class="fas fa-mug-hot"></i></h1>
-      <div class="navbar-menu">
-        <a href="#">FŐOLDAL</a>
-        <a href="../Kavek/kavek.html">KÁVÉK</a>
-        <a href="../Sutik/sutik.html">SÜTIK</a>
-      </div>
-    </div>
-  </nav>
+  <nav>
+    <label class="logo">Lucky Kávézó</label>
+    <ul>
+      <li><a href="../Fooldal/index.html">Főoldal</a></li>
+      <li><a href="../Kavek/kavek.html">Kávék</a></li>
+      <li><a href="../Sutik/sutik.html">Sütik</a></li>
+    </ul>
+</nav>
 
   <div class="description">
     <h2>Üdvözlünk</h2>
     <h1>A Lucky kávézó weblapján</h1>
-    <p>Kávéinkat a legjobb és a legtehetségesebb baristák csinálják. Kávébabjainkat a legjobb helyekről rendeljük és
-      itthoni helységünkben dolgozzuk fel. <br> A helyszínen őröljük és csináljuk meg a kávét. </p>
+    <p class="leiras">Kávéinkat a legjobb és a legtehetségesebb baristák csinálják. Kávébabjainkat a legjobb helyekről rendeljük és
+      itthoni helységünkben dolgozzuk fel. <br> A helyszínen őröljük és csináljuk meg a kávét. </p><br>
+      <a href="../elerhetosegek/elerhetoseg.html"><p class="abt">Elérhetőségeink</p></a>
   </div>
 
   </div>
