--- a/Sutik/sutik.html
+++ b/Sutik/sutik.html
@@ -13,9 +13,9 @@
     <nav>
         <label class="logo">Lucky Kávézó</label>
         <ul>
-          <li><a href="..//Fooldal/index.html">Főoldal</a></li>
-          <li><a href="..//Kavek/kavek.html">Kávék</a></li>
-          <li><a href="..//Sutik/sutik.html">Sütik</a></li>
+          <li><a href="../Fooldal/index.html">Főoldal</a></li>
+          <li><a href="../Kavek/kavek.html">Kávék</a></li>
+          <li><a href="../Sutik/sutik.html">Sütik</a></li>
         </ul>
     </nav>
 
