--- a/elerhetosegek/elerhetoseg.html
+++ b/elerhetosegek/elerhetoseg.html
@@ -7,9 +7,21 @@
     <link rel="stylesheet" href="elerhetoseg.css">
     <title>Elérhetőség</title>
 </head>
-<body class="body">
-    <li>e-mail: luckykavezo@gmail.com</li>
-    <li>telefon: 06 20 8 598 657</li>
-    <li>Kövess minket facebookon és instagrammon:@Luckykavezo</li>
-</body>
+<body>
+    <nav>
+        <label class="logo">Lucky Kávézó</label>
+        <ul>
+          <li><a href="../Fooldal/index.html">Főoldal</a></li>
+          <li><a href="../Kavek/kavek.html">Kávék</a></li>
+          <li><a href="../Sutik/sutik.html">Sütik</a></li>
+        </ul>
+    </nav>
+
+    <div class="egesz">
+        <ul><li>e-mail: luckykavezo@gmail.com</li>
+            <li>telefon: 06 20 8 598 657</li>
+            <li>Kövess minket facebookon és instagrammon:@Luckykavezo</li>
+        </body></ul>
+    </div>
+
 </html>
