--- a/Fooldal/index.html
+++ b/Fooldal/index.html
@@ -25,11 +25,16 @@
     <h2>Üdvözlünk</h2>
     <h1>A Lucky kávézó weblapján</h1>
     <p class="leiras">Kávéinkat a legjobb és a legtehetségesebb baristák csinálják. Kávébabjainkat a legjobb helyekről rendeljük és
-      itthoni helységünkben dolgozzuk fel. <br> A helyszínen őröljük és csináljuk meg a kávét. </p><br>
-      <a href="../elerhetosegek/elerhetoseg.html"><p class="abt">Elérhetőségeink</p></a>
+      itthoni helységünkben dolgozzuk fel. <br> A helyszínen őröljük és csináljuk meg a kávét. 
+    </p><br><p class="abt">Elérhetőségeink:</p>
+    <ul class="elerhetosegek"><li>e-mail: luckykavezo@gmail.com</li>
+      <li>telefon: 06 20 8 598 657</li>
+      <li>Kövess minket facebookon és instagrammon:@Luckykavezo</li>
+  </ul>
   </div>
 
-  </div>
+
+  
 </body>
 
 </html>
