--- a/Fooldal/index.html
+++ b/Fooldal/index.html
@@ -19,22 +19,25 @@
       <li><a href="../Kavek/kavek.html">Kávék</a></li>
       <li><a href="../Sutik/sutik.html">Sütik</a></li>
     </ul>
-</nav>
+  </nav>
 
-  <div class="description">
-    <h2>Üdvözlünk</h2>
-    <h1>A Lucky kávézó weblapján</h1>
-    <p class="leiras">Kávéinkat a legjobb és a legtehetségesebb baristák csinálják. Kávébabjainkat a legjobb helyekről rendeljük és
-      itthoni helységünkben dolgozzuk fel. <br> A helyszínen őröljük és csináljuk meg a kávét. 
-    </p><br><p class="abt">Elérhetőségeink:</p>
+
+  <div class="kosonto">
+  <h1>
+    <h1>Üdvözlünk <br>
+    A Lucky kávézó weblapján</h1>
+  </h1>
+  </div>
+  <div class="minden">
+    <p class="leiras">Kávéinkat a legjobb és a legtehetségesebb baristák csinálják. <br> Kávébabjainkat a legjobb helyekről rendeljük és
+      itthoni helységünkben dolgozzuk fel. <br> A helyszínen őröljük és csináljuk meg a kávét.</p><br>
+    <p class="abt">Elérhetőségeink:</p>
     <ul class="elerhetosegek"><li>e-mail: luckykavezo@gmail.com</li>
       <li>telefon: 06 20 8 598 657</li>
       <li>Kövess minket facebookon és instagrammon:@Luckykavezo</li>
-  </ul>
+    </ul>
   </div>
-
 
   
 </body>
-
 </html>
